SERVER-130954 Default initialize PoolForHost in header (#60209)

GitOrigin-RevId: e50b9d821174dfd7887ffcb07ebebc18d5e02662